--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,2 @@
-fastapi==0.116.1
-fastapi-cli==0.0.11
-fastapi-cloud-cli==0.1.5
-pydantic==2.11.9
-pydantic_core==2.33.2
-PyYAML==6.0.2
+fastapi[standard]>=0.113.0,<0.114.0
+pydantic>=2.7.0,<3.0.0
